--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.0.0"
+    "@tailwindcss/vite": "^4.0.0",
+    "prettier": "^3.5.0",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
