--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "prettier . --write&& astro build",
+    "build": "prettier . --write && astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
+    "check": "astro check",
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^4.2.0",
     "@radix-ui/react-slot": "^1.1.1",
     "@types/react": "^19.0.8",
@@ -21,7 +23,8 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.0",
