--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/2024/",
       "destination": "https://2024.acbc.dev"
+    },
+    {
+      "source": "/2024/:path*",
+      "destination": "https://2024.acbc.dev/:path*"
     }
   ]
 }
